chore: nightly refinement run 2026-05-12 — bump to v1.16.0.17 (cycle 14/100, +5953 lines)